--- a/src/app/features/dashboard/seeker/components/dashboard-home/dashboard-home.component.html
+++ b/src/app/features/dashboard/seeker/components/dashboard-home/dashboard-home.component.html
@@ -189,6 +189,7 @@
                         <h5 class="empty-state-title text-muted">No Recent Applications</h5>
                         <p class="empty-state-subtitle text-secondary">You haven't applied to any jobs recently. Start
                             exploring opportunities!</p>
+                        <button routerLink="/jobs" class="search-job-btn">Browse Jobs</button>
                     </div>
                 </div>
             </div>
